# vgmplay-js-2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  background.js  clean_up_for_commit.sh  index.html  prepare_for_usage.sh  vgmplay-audio-processor.js  vgmplay-js-glue.js  vgmplay-js.js  vgmplay-js.wasm
.claude/: settings.local.json
css/: style.css
extension/: background.js  manifest.json  vgmplay-audio-processor.js  vgmplay-js-glue.js  vgmplay-js.js  vgmplay-js.wasm
extension/css/: style.css
ff_extension/: background.js  content_harvester.js  manifest.json  vgmplay-audio-processor.js  vgmplay-js.js  vgmplay-js.wasm
ff_extension/css/: style.css
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/public/music/: manifest.json
frontend/scripts/: generate-icons.cjs  generate-manifest.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Player.css  Player.jsx
frontend/src/constants/: version.js
frontend/src/contexts/: PlaybackInfoContext.tsx
frontend/src/hooks/: useVGMPlayer.js
patches/: libvgm_per_chip_volume.patch  libvgm_per_chip_volume_clean.patch
src/: main.c  vgmplay_glue.cpp
